1. header,fatfooter,footer 改為 flex版本（header search button 放大鏡改文字）,header增加字級大小 2. breadcrumb,paginations,function Panel(font-size,function,share),filedownload,weblink模組改為flex版本

--- a/sass/page/_left_block.scss
+++ b/sass/page/_left_block.scss
@@ -1,5 +1,5 @@
 .leftblock_banner {
-    margin-bottom: 20px;
+    padding: 0 20px 20px 0;
     .item {
         min-height: 100px;
         color: #888;
@@ -12,7 +12,7 @@
     }
 }
 .leftblock_list {
-    margin-bottom: 20px;
+    padding: 0 20px 20px 0;
     h2 {
         margin: 0 0 1em;
         padding: .5em;
