--- a/sass/page/_cp.scss
+++ b/sass/page/_cp.scss
@@ -71,48 +71,11 @@ h1.title, h2.title {
         @include aSetting;
     }
 }
-// 文章標籤
-div.tag {
-    @extend %clearfix;
-    padding: .5em 0 .5em 1.5em;
-    margin-bottom: .5em;
-    position:relative;
-    &:before {
-        display: block;
-        position:absolute;
-        top:.3em;
-        left: .1em;
-        content: "";
-        width: 1em;
-        height: 1em;
-        top: .9em;
-        background: url(../images/basic/icon_tag.png) no-repeat center center;
-        background-size: 1em;
-    }
-    ul {
-        display: inline-block;
-        @include li-reset;
-        li {
-            display: inline-block;
-            margin: 0 .2em .2em 0;
-            a {
-                display: block;
-                font-size: .813em;
-                @include aSetting_nocolor;
-                border-radius: 4px;
-                border: 1px solid #DDD;
-                padding: .2em .5em;
-                &:hover,&:focus {
-                    border:1px solid $aHover;
-                }
-            }
-        }
-    }
-}
+
 // 檔案下載
 .file_download {
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 2em;
     @include clearfix();
     h3 {
         font-size: 1.5em;
@@ -121,236 +84,181 @@ div.tag {
         border-bottom: 1px solid $primaryColor;
     }
     ul {
-        counter-reset: counter;
         list-style-type: none;
         padding: 0;
-        margin-left: 1em;
-        @media screen and (max-width: 767px) {
-            margin-left: 0;
-        }
+        margin: 0;
     }
     li {
+        display: flex;
+        flex-wrap:wrap;
         position: relative;
-        margin-bottom: 10px;
-        padding-left: 1em;
-        border-bottom: 1px solid #EEE;
-        clear: both;
-        overflow: hidden;
-        padding-bottom: .5em;
-        span {
-            @include screen('mobile') {
+        padding: .5em 0 .5em 1.5em;
+        border-bottom: solid 1px #eee;
+        &:before{
+            content:'·';
+            font-size: 2em;
+            font-weight: bold;
+            width: 1em;
+            height: 1em;
+            position: absolute;
+            top:.45em;
+            left:.1em;
+            color:#666;
+        }
+        span{
+            flex:0 0 auto;
+            margin:.2em;
+        }
+        .file-name{
+            line-height: 1.8em;
+            margin:.2em .2em .2em 0;
+        }
+        .doc, .docx, .odt{
+            font-size: .875em;
+            a{
+                background: #275cb7;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
                 display: block;
-                margin-bottom: .2em;
-            }
-        }
-        &:before {
-            position: absolute; // outline: 1px solid red;
-            top: .8em;
-            left: .2em;
-            text-align: right;
-            width: 30px;
-            width: 6px;
-            height: 6px;
-            border-radius: 50%;
-            background: #999;
-            content: "";
-            // counter-increment: counter;
-            // content: counters(counter, ".") " . ";
-            // display:none;
-        }
-        .update,
-        .file_view {
-            font-size: .813em;
-            color: #AAA;
-            width: 120px;
-            padding-left: 35px;
-            float: none;
-            margin-top: 5px;
-            @media screen and (max-width: 767px) {
-                display: inline-block;
-                float: none;
-                width: auto;
-                margin-top: 0;
-            }
-            @include screen('xs_mobile') {
-                display: none;
-            }
-        }
-        .update {
-            width: 150px;
-            @media screen and (max-width: 767px) {
-                margin-left: 5px;
-            }
-        }
-        a {
-            // padding: .2em 0px .2em 65px;
-            padding: 0px;
-            position: relative;
-            height: auto;
-            line-height: 20px;
-            display: inline-block;
-            vertical-align: middle;
-            margin: 0px .2em;
-            min-width: 32px;
-            text-align: center;
-            text-indent: -9999px;
-            height: 34px;
-            @include text-overflow;
-            @include box-sizing;
-            margin-bottom: .1em;
-            @include screen('mobile') {
-                max-width: 2em;
-                margin: 0px auto .5em 0px;
-            }
-            &:hover, &:focus {
-                &:before {
-                    content: "";
-                    z-index: 99;
-                    position: absolute;
-                    border-radius: 4px;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    box-shadow: 0px 0px 0px 2px $aHover inset;
-                }
-            }
-            .kb {
-                font-size: .75em;
-                color: #666;
-                display: none;
-                margin: 0px .5em;
-            }
-            &:after {
-                content: "";
-                background: url(../images/basic/icon_file.png) no-repeat center center;
-                background-size: contain;
-                width: 26px;
-                height: 28px;
-                position: absolute;
-                top: 3px;
-                left: 3px;
-                text-align: right;
-            }
-            // word系列
-            &[href$="doc"] {
-                &:after {
-                    background: url(../images/basic/icon_doc.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="docx"] {
-                &:after {
-                    background: url(../images/basic/icon_docx.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="odt"] {
-                &:after {
-                    background: url(../images/basic/icon_odt.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            // excel系列
-            &[href$="xls"] {
-                &:after {
-                    background: url(../images/basic/icon_xls.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="csv"] {
-                &:after {
-                    background: url(../images/basic/icon_csv.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="ods"] {
-                &:after {
-                    background: url(../images/basic/icon_ods.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="xlsx"] {
-                &:after {
-                    background: url(../images/basic/icon_xlsx.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            // pdf系列
-            &[href$="pdf"] {
-                &:after {
-                    background: url(../images/basic/icon_pdf.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="ppt"] {
-                &:after {
-                    background: url(../images/basic/icon_ppt.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="pptx"] {
-                &:after {
-                    background: url(../images/basic/icon_pptx.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="odp"] {
-                &:after {
-                    background: url(../images/basic/icon_odp.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            // 其他格式
-            &[href$="zip"] {
-                &:after {
-                    background: url(../images/basic/icon_zip.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="txt"] {
-                &:after {
-                    background: url(../images/basic/icon_txt.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="mov"] {
-                &:after {
-                    background: url(../images/basic/icon_mov.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="mp3"] {
-                &:after {
-                    background: url(../images/basic/icon_mp3.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="jpg"] {
-                &:after {
-                    background: url(../images/basic/icon_jpg.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="wmv"] {
-                &:after {
-                    background: url(../images/basic/icon_wmv.png) no-repeat center center;
-                    background-size: contain;
-                }
-            }
-            &[href$="mp4"] {
-                &:after {
-                    background: url(../images/basic/icon_mp4.png) no-repeat center center;
-                    background-size: contain;
+                &:hover, &:focus{
+                    background: darken(#275cb7, 5%);
                 }
             }
         }
+        .xls, .xlsx, .csv, .ods{
+            font-size: .875em;
+            a{
+                background: #387947;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#387947, 5%);
+                }
+            }
+        }
+        .ppt, .pptx, .odp, .pdf{
+            font-size: .875em;
+            a{
+                background: #c55a3b;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#c55a3b, 5%);
+                }
+            }
+        }
+        .pdf{
+            font-size: .875em;
+            a{
+                background: #c00;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#c00, 5%);
+                }
+            }
+        }
+        .zip{
+            font-size: .875em;
+            a{
+                background: #eb712e;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#eb712e, 5%);
+                }
+            }
+        }
+        .txt{
+            font-size: .875em;
+            a{
+                background: #555;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#555, 5%);
+                }
+            }
+        }
+        .mov{
+            font-size: .875em;
+            a{
+                background: #009999;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#009999, 5%);
+                }
+            }
+        }
+        .mp3, .mp4{
+            font-size: .875em;
+            a{
+                background: #088ecc;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#088ecc, 5%);
+                }
+            }
+        }
+        .jpg{
+            font-size: .875em;
+            a{
+                background: #6c29a4;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#6c29a4, 5%);
+                }
+            }
+        }
+        .wmv{
+            font-size: .875em;
+            a{
+                background: #430a1f;
+                color:#fff;
+                font-weight: bold;
+                padding: .2em .8em;
+                border-radius: 3px;
+                display: block;
+                &:hover, &:focus{
+                    background: darken(#430a1f, 5%);
+                }
+            }
+        }
+
     }
 }
 // 外部連結
 .web_link {
-    width: 100%;
-    margin: 0 auto;
+    margin: 1em 0;
     @extend %clearfix;
     h3 {
         font-size: 1.5em;
@@ -360,34 +268,30 @@ div.tag {
     }
     ol,
     ul {
-        counter-reset: counter;
         list-style-type: none;
         padding: 0;
-        margin-left: 1em;
-        @media screen and (max-width: 767px) {
-            margin-left: 0;
-        }
+        margin: 0;
     }
     li {
         position: relative;
-        margin-bottom: 10px;
-        border-bottom: 1px solid #EEE;
+        padding: .5em 0;
+        border-bottom: solid 1px #eee;
+        padding-left: 1.5em;
+        &:before{
+            content:'·';
+            font-size: 2em;
+            font-weight: bold;
+            width: 1em;
+            height: 1em;
+            position: absolute;
+            top:.35em;
+            left:.1em;
+            color:#666;
+        }
         a {
-            padding: .2em 0px .2em 35px;
-            position: relative;
-            height: auto;
-            line-height: 1.45em;
+            padding: .2em 0px;
             display: block;
             @include aSetting_nocolor;
-            &:before {
-                position: absolute; // outline: 1px solid red;
-                top: 5px;
-                left: 0px;
-                text-align: right;
-                width: 30px;
-                counter-increment: counter;
-                content: counters(counter, ".") " . ";
-            }
         }
     }
 }
@@ -399,24 +303,20 @@ div.tag {
     border-left: solid 5px $primaryColor;
     padding: 0.8em 1.5em 0.8em;
     background: #F2F2F2;
+    display: flex;
+    flex-wrap:wrap;
     @extend %clearfix;
-     @include box-sizing;
-    @include screen('mobile') {
-        font-size: 0.938em;
-    }
+    @include box-sizing;
+
     li {
-        width: 32%;
+        flex:1 1 calc(100% / 3);
         margin-bottom: .5em;
-        display: inline-block;
-        vertical-align: top;
+
         @include screen('tablet') {
-            width: 48%;
-            margin-bottom: .2em;
-            font-size: 0.875em;
+            flex:1 1 calc(100% / 2);
         }
         @include screen('mobile') {
-            width: 100%;
-            display: block;
+            flex:1 1 calc(100% / 1);
         }
     }
 }
