--- a/sass/sass/_fatfooter.scss
+++ b/sass/sass/_fatfooter.scss
@@ -5,9 +5,9 @@
     padding-bottom: 1em;
     margin: 0 auto;
     background: $fatfooterBgColor;
-    //   @include screen('mobile') {
-    //     display: none;
-    // }
+    @include screen('mobile') {
+        display: none;
+    }
     .container {
         overflow: hidden;
         @include box-sizing;
@@ -65,26 +65,15 @@
         position: relative;
         padding: 3em 0 0 2em;
         @include box-sizing;
-        @include screen('mobile') {
-            padding: 1em 0;
-        }
+
         ul {
+            display: flex;
             @include li-reset;
-            @include screen('mobile') {
-                width: 100%;
-                display: block;
-                margin: 0px auto;
-            }
+
             li {
-                display: inline-block;
-                text-align: left;
-                vertical-align: top;
-                margin: 0 -5px 1em 0;
+                flex:1 1 calc(100% / 6);
                 @include box-sizing;
-                @include screen('mobile') {
-                    display: block;
-                    margin:0 0 .4em
-                }
+
                 a {
                     line-height: 1.5;
                     display: block;
@@ -96,20 +85,16 @@
                     }
                 }
                 ul {
-                    margin-top: 5px;
+                    display: flex;
+                    flex-direction:column;
+                    flex-wrap:wrap;
+                    margin: 0;
+                    padding:0 1em 0 0;                  
                     @include screen('mobile') {
                         width: auto;
                     }
                     li {
-                        display: block;
-                        margin: 0;
-                        border: none;
-                        background: none;
-                        width: 100%;
-                        @include screen('mobile') {
-                            display:inline-block;
-                            width:auto;
-                        }
+                        display: 0 0 100%;
                         a {
                             display: block;
                             @include aSetting_nocolor;
@@ -117,11 +102,8 @@
                             text-align: left;
                             font-size: .938em;
                             line-height: 1.5em;
-                            padding: .5em .2em;
+                            padding: .5em 0;
                             background: none;
-                            @include screen('mobile') {
-                                padding:.3em .2em;
-                            }
                         }
                     }
                     //第三層關閉
