--- a/sass/sass/_fontsize.scss
+++ b/sass/sass/_fontsize.scss
@@ -1,52 +1,57 @@
 .font_size {
-    overflow: hidden;
-    text-align: center;
     display: flex;
-    align-items: center;
+    flex:0 1 12em;
+    padding: .3em;
     span {
-        flex: 0 0 auto;
-        font-size: .938em;
-        color: #666;
+        font-size: .875em;
+        color: #222;
+        padding-top: .3em;
     }
     ul {
-       flex: 0 0 auto;
-        @include li-reset;
-        display: flex;
-    align-items: center;
-        li {
-            width: 40px;
-            height: 40px;
-            font-size: 1em;
-           
-            margin: 0 .2em;
-            a {
-                display: block;
-                text-align: center;
-                line-height: 40px;
-                border-radius: 50%;
+
+       @include li-reset;
+       display: flex;
+       flex: 0 0 6em;
+
+       li {
+
+        font-size: 1em;
+        flex:0 0 auto;
+        margin: 2px;
+
+        align-items: center;
+        a {
+            display: block;
+            text-align: center;
+            line-height: 1.8em;
+            border-radius: 50%;
+            background: #F1F1F1;
+            width: 30px;
+            height: 30px;
+            color: #333;
+            &:hover, &:focus {
+                background: $aHover;
+                color: #FFF;
+            }
+            &.active {
                 background: #F1F1F1;
-                color: #333;
                 &:hover, &:focus {
                     background: $aHover;
                     color: #FFF;
                 }
-                &.active {
-                    background: #F1F1F1;
-                    &:hover, &:focus {
-                        background: $aHover;
-                        color: #FFF;
-                    }
-                }
-                &.small {
-                    font-size: .938em;
-                }
-                &.large {
-                    font-size: 1.125em;
-                }
+            }
+            &.small {
+                font-size: .938em;
+                line-height:2em;
+            }
+            &.large {
+                font-size: 1.125em;
+                line-height:1.6em;
             }
         }
     }
-    @include screen('mobile') {
-        display: none;
-    }
+}
+@include screen('mobile') {
+    display: none;
+}
 }
