--- a/sass/sass/_paginations.scss
+++ b/sass/sass/_paginations.scss
@@ -10,15 +10,18 @@
         margin: 0px .5em;
     }
     .page {
-        margin: 10px 0;
+        margin: 10px auto;
         padding: 0;
-        display: block;
+        display: flex;
+        justify-content:center;
+        flex-wrap:wrap;
         li {
-            display: inline-block;
             min-width: 40px;
             height: 40px;
-            margin-bottom: 5px;
+            margin: 2px;
             list-style: none;
+            flex:0 0 40px;
+
             @include box-sizing();
             a {
                 border-radius: 5px;
