--- a/sass/sass/_share.scss
+++ b/sass/sass/_share.scss
@@ -4,12 +4,10 @@
     margin: .5em 0;
     ul {
         @include li-reset;
+        display: flex;
         li {
-            width: 30px;
-            height: 30px;
-            display: inline-block;
-            text-align: left;
             margin: 0px 3px 3px;
+            flex:0 0 30px;
             a{
                 display:block;
                 height: 30px;
@@ -91,18 +89,6 @@
                 margin: 20% auto;
             }
         }
-        // img {
-        //     width: 100%;
-        //     height: 100%;
-        // }
-        // ul {
-        //     @include li-reset;
-        //     li {
-        //         width: 40px;
-        //         height: 40px;
-        //         display: inline-block;
-        //         position: relative;
-        //     }
-        // }
+
     }
 }
