--- a/sass/page/_left_block.scss
+++ b/sass/page/_left_block.scss
@@ -1,5 +1,5 @@
 .leftblock_banner {
-    padding: 0 20px 20px 0;
+    padding: 0 0 20px 0;
     .item {
         min-height: 100px;
         color: #888;
@@ -12,7 +12,7 @@
     }
 }
 .leftblock_list {
-    padding: 0 20px 20px 0;
+    padding: 0 0 20px 0;
     h2 {
         margin: 0 0 1em;
         padding: .5em;
