--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -55,19 +55,21 @@ body {
     }
     >.container {
         @include gutter(); //gutter 代表左右要留白
-        display: flex;
-        box-sizing: border-box;
+        // display: flex;
+        
     }
     .left_block {
-        flex:0 0 260px;
-        box-sizing: border-box;
+        // flex:0 0 260px;
+        // max-width: 260px;
+        float: left;
+        width: 260px;
+        margin-right: 40px;
         @include screen('tablet') {
             display: none;
         }
     }
     .center_block {
-        flex: 1 1 0%;
-        max-width: 100%;
-        box-sizing: border-box;
+        // flex:auto;
+        overflow: hidden;
     }
 }
