--- a/sass/sass/_icon.scss
+++ b/sass/sass/_icon.scss
@@ -9,8 +9,8 @@
 }
 @mixin hyui_icon($icon_img) {
     &:before {
-        background-image: url(../images/icon/#{$icon_img}.svg);
-        background-size: cover;
+        background: url(../images/icon/#{$icon_img}.svg)no-repeat center center;
+        background-size: contain;
         margin-top: -0.1em;
         margin-bottom: .1em;
     }
@@ -159,4 +159,10 @@
 }
 .i_minus{
     @include hyui_icon('icon_minus');
+}
+.i_play{
+    @include hyui_icon('icon_play');
+}
+.i_reflash{
+    @include hyui_icon('icon_reflash');
 }
